package com.kzh.dao;

import com.kzh.entity.ProductParams;
import com.kzh.general.GeneralDAO;
import org.springframework.stereotype.Repository;

@Repository
public interface ProductParamsMapper extends GeneralDAO<ProductParams> {
}